--- a/client/src/styles/pageheader.module.css
+++ b/client/src/styles/pageheader.module.css
@@ -28,13 +28,16 @@
   letter-spacing: .08rem;
 }
 .form{
-  width: 20%;
+  width: 30rem;
   display: flex;
   flex-direction: column;
+  margin: auto ;
 }
 
 .form>label{
-  padding: 2rem 0;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .abutton{
@@ -85,13 +88,37 @@
 .portfolioItem{
   width: 100%;
   height: 100%;
-  background-color: red;
 }
 
 .input{
-  border-width: 0 0 .05rem 0;
-  border-color: #1DE9B6;
+  border-width: 0 0 .08rem 0;
+  border-color: lightgray;
   text-align: center;
   resize: none;
   outline: none;
+  padding-bottom: .5rem;
+}
+
+.input:focus{
+  transition: all .3s;
+  border-color: #1DE9B6;
+
+}
+
+.formTitle{
+  margin-top: 3rem;
+  margin-bottom: -1rem;
+}
+
+.formbtn{
+  width: 5.6rem;
+  height: 2rem;
+  color: black;
+  text-align: center;
+  border: none;
+  background-color: #1DE9B6;
+  margin-top: 2rem;
+  align-self: center;
+  outline: none;
+
 }
