--- a/client/src/styles/pageheader.module.css
+++ b/client/src/styles/pageheader.module.css
@@ -10,7 +10,7 @@
 }
 
 .logo {
-  width: 24%;
+  width: 18%;
   margin: 4rem auto 2.3rem auto;
 }
 
@@ -40,6 +40,10 @@
   margin: auto ;
 }
 
+.contactWrapper{
+  padding-bottom: 4rem;
+}
+
 .form>label{
   padding: 1rem 0;
   display: flex;
@@ -56,6 +60,33 @@
   padding: 2rem 0 1rem 0;
 
 }
+
+.detailtitle{
+  text-transform: uppercase;
+  color: gray;
+  padding: 0;
+  margin: 3rem 0 -.05rem 0;
+  font-size: .8rem;
+}
+
+.title{
+  padding: 0;
+  margin: 0;
+  font-size: 2rem;
+}
+
+.objectFit{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel{
+  width: 45%;
+  margin: auto;
+  padding: 2rem 0;
+}
+
 /* strong{
 
 } */
@@ -63,6 +94,7 @@
 .normalFooterul{
   display: flex;
   justify-content: center;
+  padding-right: 2.5rem;
 }
 
 .abouttext{
@@ -88,7 +120,7 @@
 
 .footerlogo{
   width: 10rem;
-  padding-left: 2.5rem;
+  /* padding-left: 2.5rem; */
 }
 
 .portfolioGrid{
@@ -99,7 +131,6 @@
   grid-gap: 1rem;
   width: 80%;
   margin: 3rem auto 5rem auto;
-  /* margin-top: 3rem; */
 }
 
 .portfolioGridPics{
