--- a/client/src/styles/pageheader.module.css
+++ b/client/src/styles/pageheader.module.css
@@ -1,7 +1,7 @@
-@import url('hhttps://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,800;1,300&display=swap');
 
 *{
   font-family: 'Roboto', sans-serif;
+  font-display: auto;
 }
 
 
@@ -29,7 +29,7 @@
 }
 
 .abouttext{
-  width: 45%;
+  width: 40%;
   font-weight: 100;
   letter-spacing: .08rem;
 }
