--- a/client/src/components/ProjectDetail/projectdetail.module.css
+++ b/client/src/components/ProjectDetail/projectdetail.module.css
@@ -40,3 +40,25 @@ strong{
     font-size: .9rem;
     line-height: 1.6rem;
   }
+
+  /* .FacebookButton{
+    text-align: center;
+    display: flex;
+    width: 80%;
+    margin: 2rem auto -2rem auto;
+} */
+@media only screen and (max-width: 600px) {
+  .carousel{
+    width: 100%;
+    margin: auto;
+    padding: 2rem 0;
+  }
+
+  .detailtext{
+    width: 80%;
+    margin: 1rem auto 3rem auto;
+    letter-spacing: .1rem;
+    font-size: .9rem;
+    line-height: 1.6rem;
+  }
+}
