--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -52,6 +52,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-color: lightgrey;
+
   }
   
   .portfolioGrid::before {
